add name to input item

--- a/src/app/date/date.component.html
+++ b/src/app/date/date.component.html
@@ -3,6 +3,7 @@
 <div class="center">
   <form>
     <dp-date-picker
+      name="mydate"
       dir="rtl"
       [(ngModel)]="dateObject"
       mode="day"
